19 Oct 2011: Wouter
	- Add @ to echo in Makefile.
	- print error on control unknown command, and exit status 1.
	- tag 0.6
	- trunk is 0.7 under development.
	- fix that setup hint is not printed on a reinstall.
	- stop executables before re-install of dnssec-trigger.
	- tested to work on winXP (thanks Jan-Piet Mens).
	- fix printout of 1970 date, instead that no probe was performed.

18 Oct 2011: Wouter
	- Manpage fixes
	- can build outside of sourcedir.
	- libappindicator support, for Ubuntu Unity desktop GUI.

17 Oct 2011: Wouter
	- Fix insecure mode after dnstcp443 has been probed.
	- Fix OS-race on Linux/BSD, it sets immutable settings on install, and
	  checks this regularly (and fixes if necessary).

13 Oct 2011: Wouter
	- the dnssec-trigger-panel (gtk2) works on the XFCE desktop.
	- windows package works, tested Vista.
	- osx fix for insecure mode.

12 Oct 2011: Wouter
	- makes resolv.conf immutable and restores on uninstall.

10 Oct 2011: Wouter
	- detect transparent proxies and avoid them.

29 Sep 2011: Wouter
	- mac cocoa gui for hotspot signon.
	- 0.5 release.

28 Sep 2011: Wouter
	- nsis uninstall welcome image.
	- gtk menu item and dialog for hotspot signon.
	- win32 menu item and dialog for hotspot signon.
	- install unbound with dnssec-trigger on windows.  Reduced install
	  size and available for configuration by installer.exe.

27 Sep 2011: Wouter
	- for windows, get unbound-control config and path from registry.
	- new IP6 address for the service at nlnetlabs.
	- fix for windows busy loop in dnssectriggerd.
	- do not log error for RPC server not started in windows.

26 Sep 2011: Wouter
	- tentative fix for windows loop bug: if wlanapi.dll does not load.

23 Sep 2011: Wouter
	- windows README is a proper .txt files for dos.
	- 0.4 release.
	- trunk is 0.5 in development.

22 Sep 2011: Wouter
	- dnssec-trigger-control reprobe command from the commandline.
	- dnssec-trigger-control hotspot_signon, forces insecure mode for